# standard-webhooks

.github/: dependabot.yml
.github/workflows/: python-lint.yml  python-release.yml
libraries/python/: pyproject.toml
libraries/python/scripts/: lint.sh
libraries/python/standardwebhooks/: __init__.py
libraries/python/tests/: test_webhooks.py
